--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/croissant.html">Croissant</a> 
+    <ul>
+        <li><a href="recipes/croissant.html">Croissant</a></li>
+        <li><a href="recipes/chicken-noodle-soup.html">Chicken Noodle Soup</a></li>
+        <li><a href="recipes/potato-soup.html">Potato Soup</a></li>
+    </ul>
+
+
 </body>
 </html>
