--- a/recipes/croissant.html
+++ b/recipes/croissant.html
@@ -7,5 +7,31 @@
 </head>
 <body>
     <h1>Croissant</h1>
+    <img src="../images/croissant.jpg" alt="photo of multiple croissants stacked on top of each other">
+    <h3>Description</h3>
+    <p>Authentic French croissants. Patience and effort are required but the results are totally worth it!</p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>3 tablespoons of warm water</li>
+        <li>1 1/4 teaspoons active dry yeast</li>
+        <li>1 teaspoon white sugar</li>
+        <li>1 3/4 cups all-purpose flour</li>
+        <li>2/3 cup warm milk</li>
+        <li>2 teaspoons white sugar</li>
+        <li>1 1/2 teaspoons salt</li>
+        <li>2 tablespoons vegetable oil</li>
+        <li>2/3 cup unsalted butter, chilled</li>
+        <li>1 large egg</li>
+        <li>1 tablespoon water</li>
+    </ul>
+
+    <ol>
+        <li>Combine warm water, yeast, and 1 teaspoon sugar in a small bowl. Let stand until yeast softens and begins to form a creamy foam, about 5 minutes.</li>
+        <li>Measure flour into a mixing bowl. Combine warm milk, 2 teaspoons sugar, and salt in a separate bowl; blend milk mixture, yeast mixture, and oil into flour. Mix well and knead until smooth. Cover, and let rise until over tripled in volume, about 3 hours.</li>
+        <li>Deflate gently, and let rise again until doubled, about another 3 hours.</li>
+        <li>Deflate dough and chill for 20 minutes.</li>
+        <li>Massage butter until pliable, but not soft and oily. Pat dough into a 14x8-inch rectangle.</li>
+    </ol>
+
 </body>
 </html>
